added admin user name for signup

--- a/public/books.html
+++ b/public/books.html
@@ -87,6 +87,9 @@
                         <li>
                             <a  href="#/" ng-click="signout()" ng-show="authenticated"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
                         </li>
+                        <li ng-show="admin">
+                            <a href="#/signup">Register</a>
+                        </li>
                     </ul>
                     <!-- END Main Header Navigation -->
 
