--- a/public/login.html
+++ b/public/login.html
@@ -24,16 +24,11 @@
                     <!-- Login Block -->
                     <div class="block block-themed animated fadeIn">
                         <div class="block-header bg-primary">
-                            <ul class="block-options">
-                                <li>
-                                    <a href="#/signup" data-placement="left" title="New Account"><i class="si si-plus"></i></a>
-                                </li>
-                            </ul>
                             <h3 class="block-title">Login</h3>
                         </div>
                         <div class="block-content block-content-full block-content-narrow">
                             <!-- Login Title -->
-                            <h1 class="h2 font-w600 push-30-t push-5">OneUI</h1>
+                            <h1 class="h2 font-w600 push-30-t push-5">Smarky</h1>
                             <p>Welcome, please login.</p>
                             <!-- END Login Title -->
 
