--- a/public/details.html
+++ b/public/details.html
@@ -81,6 +81,9 @@
                             </ul>
                         </li> -->
                         <li>
+                            <a href="#/{{current_user}}/aboutus">About us</a>
+                        </li>
+                        <li>
                             <a href="javascript:void(0)">{{current_user}}</a>
                         </li>
                         <li>
@@ -92,7 +95,7 @@
                     <!-- Header Navigation Left -->
                     <ul class="nav-header pull-left">
                         <li class="header-content">
-                            <a class="h5 text-white" href="#/{{current_user}}/home">
+                            <a class="h3 text-white" href="#/{{current_user}}/home">
                                Smarky
                             </a>
                         </li>
