--- a/public/discussion.html
+++ b/public/discussion.html
@@ -84,6 +84,9 @@
                             </ul>
                         </li> -->
                         <li>
+                            <a href="#/{{current_user}}/aboutus">About us</a>
+                        </li>
+                        <li>
                             <a href="javascript:void(0)">{{current_user}}</a>
                         </li>
                         <li>
@@ -95,7 +98,7 @@
                     <!-- Header Navigation Left -->
                     <ul class="nav-header pull-left">
                         <li class="header-content">
-                            <a class="h5 text-white" href="#/{{current_user}}/home">
+                            <a class="h3 text-white" href="#/{{current_user}}/home">
                                Smarky
                             </a>
                         </li>
