--- a/public/questions.html
+++ b/public/questions.html
@@ -83,6 +83,9 @@
                             </ul>
                         </li> -->
                         <li>
+                            <a href="#/{{current_user}}/aboutus">About us</a>
+                        </li>
+                        <li>
                             <a href="javascript:void(0)">{{current_user}}</a>
                         </li>
                         <li>
@@ -94,7 +97,7 @@
                     <!-- Header Navigation Left -->
                     <ul class="nav-header pull-left">
                         <li class="header-content">
-                            <a class="h5 text-white" href="#/{{current_user}}/home">
+                            <a class="h3 text-white" href="#/{{current_user}}/home">
                                Smarky
                             </a>
                         </li>
