--- a/public/details.html
+++ b/public/details.html
@@ -216,7 +216,7 @@
             <ul ng-repeat="data in discData track by $index">
                <li class={{data.id}}>
                   <h3><a style="color: black;"href="#/{{current_user}}/home/{{bookIsbn}}/{{data.edition}}/{{data.pagenumber}}/discussion/{{data.id}}">{{data.question}}</a></h3>
-                  <small style="color: black;">Page:{{data.pagenumber}} &nbsp; Edition:{{data.edition}}</small>
+                  <small style="color: black;">Section:{{data.pagenumber}} &nbsp; Edition:{{data.edition}}</small>
                   <small style="color: black;" class="pull-right">Created at : {{data.createdat | date:"h:mma 'on' MMM d, y"}} </small>
                </li>
                <hr>
