--- a/public/about.html
+++ b/public/about.html
@@ -91,7 +91,7 @@
                             <a  href="#/" ng-click="signout()" ng-show="authenticated"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
                         </li>
                         <li ng-show="admin">
-                            <a href="#/signup">Register</a>
+                            <a href="#/signup">Add user</a>
                         </li>
                     </ul>
                     <!-- END Main Header Navigation -->
@@ -116,7 +116,7 @@
                     <section class="content content-full content-boxed overflow-hidden">
                         <!-- Section Content -->
                         <div class="push-100-t push-50 text-center">
-                            <h1 class="h2 text-white push-10">Choose a book</h1>
+                            <h1 class="h2 text-white push-10">About us</h1>
                         </div>
                         <!-- END Section Content -->
                     </section>
@@ -128,6 +128,14 @@
                     <section class="content content-boxed">
                         <!-- Section Content -->
                         <div class="container">
+                        <h2>Smarky is a platform for enabling the embedding of RFIDs in university textbooks.</h2><br>   
+                        <h3>Smarky Team</h3><br>
+                        <h3>Mohamed Ayman</h3><br>
+                        <a href="eg.linkedin.com/in/mohamedaymankamal"></a><br>
+                        <h3>yasmeen essam</h3><br>
+                        <a href=""></a><br>
+                        <h3>Mohamed Ayman</h3><br>
+                        <a href="www.aboulsaadat.com/wael"></a><br>
 						</div>
                         <!-- END Section Content -->
                     </section>
@@ -142,35 +150,7 @@
             <footer id="page-footer" class="bg-white">
                 <div class="content content-boxed">
                     <!-- Footer Navigation -->
-                    <div class="row push-30-t items-push-2x">
-                        <div class="col-sm-4">
-                            <h3 class="h5 font-w600 push-20">Android App</h3>
-                            <ul class="list list-simple-mini font-s13">
-                                <li>
-                                    <a class="font-w600" href="javascript:void(0)">Click here!</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-4 pull-right">
-                            <h3 class="h5 font-w600  push-20">Made by</h3>
-                            <div class="font-s13 push">
-                                <strong>German University in Cairo.</strong><br>
-                            </div>
-                            <div class="font-s13">
-                                <i class="si si-envelope-open"></i> m.ayman854@gmail.com
-                            </div>
-                        </div>
-                    </div>
-                    <!-- END Footer Navigation -->
-
-                    <!-- Copyright Info -->
-                    <div class="font-s12 push-20 clearfix">
-                        <hr class="remove-margin-t">
-                        
-                    </div><div class="pull-left">
-                            <a class="font-w600" href="http://goo.gl/6LF10W" target="_blank">Copyrights</a> &copy; <span class="js-year-copy"></span>
-                        </div>
-                    <!-- END Copyright Info -->
+                    
                 </div>
             </footer>
             <!-- END Footer -->
