--- a/public/about.html
+++ b/public/about.html
@@ -134,7 +134,7 @@
                         <a href="eg.linkedin.com/in/mohamedaymankamal"></a><br>
                         <h3>yasmeen essam</h3><br>
                         <a href=""></a><br>
-                        <h3>Mohamed Ayman</h3><br>
+                        <h3>Wael Aboulsaadat</h3><br>
                         <a href="www.aboulsaadat.com/wael"></a><br>
 						</div>
                         <!-- END Section Content -->
