--- a/public/about.html
+++ b/public/about.html
@@ -131,11 +131,11 @@
                         <h2>Smarky is a platform for enabling the embedding of RFIDs in university textbooks.</h2><br>   
                         <h3>Smarky Team</h3><br>
                         <h3>Mohamed Ayman</h3><br>
-                        <a href="eg.linkedin.com/in/mohamedaymankamal">contact</a><br>
+                        <a href="http://eg.linkedin.com/in/mohamedaymankamal">contact</a><br>
                         <h3>yasmeen essam</h3><br>
                         <a href="">contactx</a><br>
                         <h3>Wael Aboulsaadat</h3><br>
-                        <a href="www.aboulsaadat.com/wael">contact</a><br>
+                        <a href="http://www.aboulsaadat.com/wael">contact</a><br>
 						</div>
                         <!-- END Section Content -->
                     </section>
