--- a/public/about.html
+++ b/public/about.html
@@ -132,8 +132,8 @@
                         <h3>Smarky Team</h3><br>
                         <h3>Mohamed Ayman</h3><br>
                         <a href="http://eg.linkedin.com/in/mohamedaymankamal">contact</a><br>
-                        <h3>yasmeen essam</h3><br>
-                        <a href="">contactx</a><br>
+                        <h3>yasmeen Essam</h3><br>
+                        <a href="https://eg.linkedin.com/in/yasmeenessam">contactx</a><br>
                         <h3>Wael Aboulsaadat</h3><br>
                         <a href="http://www.aboulsaadat.com/wael">contact</a><br>
 						</div>
