--- a/public/books.html
+++ b/public/books.html
@@ -91,7 +91,7 @@
                             <a  href="#/" ng-click="signout()" ng-show="authenticated"><span class="glyphicon glyphicon-log-in"></span> Logout</a>
                         </li>
                         <li ng-show="admin">
-                            <a href="#/signup">Add User</a>
+                            <a href="#/signup"  ng-show="admin" >Add User</a>
                         </li>
                     </ul>
                     <!-- END Main Header Navigation -->
