--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" id="css-main" href="assets/css/oneui.css">
         <!-- <link rel="stylesheet" href="assets/css/oneui.min.css"> -->
 </head>
-<body ng-app="task3app"><!-- 
+<body ng-app="main"><!-- 
  <nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -57,7 +57,7 @@
 
         <!-- Page JS Code -->
           <script src="assets/js/pages/base_pages_login.js"></script>
-          <script src="javascripts/task3app.js"></script>
+          <script src="javascripts/main.js"></script>
 
 </body>
 </html>
