--- a/public/about.html
+++ b/public/about.html
@@ -132,7 +132,7 @@
                         <h3>Smarky Team</h3><br>
                         <h3>Mohamed Ayman</h3><br>
                         <a href="http://eg.linkedin.com/in/mohamedaymankamal">contact</a><br>
-                        <h3>yasmeen Essam</h3><br>
+                        <h3>Yasmeen Essam</h3><br>
                         <a href="https://eg.linkedin.com/in/yasmeenessam">contact</a><br>
                         <h3>Wael Aboulsaadat</h3><br>
                         <a href="http://www.aboulsaadat.com/wael">contact</a><br>
