--- a/public/rfids.html
+++ b/public/rfids.html
@@ -140,6 +140,11 @@
                                 </div>
                             </div>
                         </div>
+
+                            <form ng-Submit="create()">
+                                 <input required class="form-control" ng-model = "rfid" placeholder="Section Name"></input>
+                                 <input class="btn btn-primary pull-right " type="submit" value="Submit!" id="sub" />
+                            </form>
                         </div>
 						</div>
                         <!-- END Section Content -->
