--- a/public/rfids.html
+++ b/public/rfids.html
@@ -141,7 +141,7 @@
                             </div>
                         </div>
 
-                            <form ng-Submit="create()">
+                            <form ng-Submit="createp()">
                                  <input required class="form-control" ng-model = "rfid" placeholder="Section Name"></input>
                                  <input class="btn btn-primary pull-right " type="submit" value="Submit!" id="sub" />
                             </form>
