make it better 2

--- a/public/rfids.html
+++ b/public/rfids.html
@@ -142,7 +142,7 @@
                         </div>
 
                             <form ng-Submit="createp()">
-                                 <input required class="form-control" ng-model = "rfid.pagenumber" placeholder="Section Name"></input>
+                                 <input required class="form-control" ng-model = "rfid" placeholder="Section Name"></input>
                                  <input class="btn btn-primary pull-right " type="submit" value="Submit!" id="sub" />
                             </form>
                         </div>
