--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,7 @@
         <link rel="stylesheet" id="css-main" href="assets/css/oneui.css">
         <!-- <link rel="stylesheet" href="assets/css/oneui.min.css"> -->
 </head>
-<body ng-app="main"><!-- 
- <nav class="navbar navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="home.html" class="active">The Nfc Book</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li ng-show="authenticated"><a><span class="glyphicon glyphicon-user"></span> Logged in as: {{current_user}}</a></li>
-        <li><a href="#login" ng-click="signout()" ng-show="authenticated"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
+<body ng-app="main">
   <div>
     <div ng-view></div>
   </div>
